<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center|top"
    android:layout_marginStart="65dp"
    android:layout_marginEnd="65dp"
    android:paddingBottom="@dimen/margin_medium_large">

    <ImageView
        android:id="@+id/dialog_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription"
        tools:src="@drawable/home" />

    <TextView
        android:id="@+id/dialog_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="@dimen/margin_medium"
        android:layout_marginEnd="20dp"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dialog_icon"
        tools:text="Home Location detection status" />

    <TextView
        android:id="@+id/dialog_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@id/dialog_title"
        app:layout_constraintStart_toStartOf="@id/dialog_title"
        app:layout_constraintTop_toBottomOf="@id/dialog_title"
        tools:text="@string/dialog_description" />

    <TextView
        android:id="@+id/dismiss_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="38dp"
        android:padding="@dimen/margin_small"
        android:text="@string/dismiss"
        android:textAllCaps="true"
        android:textColor="@color/blue_data"
        app:layout_constraintEnd_toEndOf="@id/dialog_description"
        app:layout_constraintTop_toBottomOf="@id/dialog_description" />

    <TextView
        android:id="@+id/turn_on_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/margin_small"
        android:textAllCaps="true"
        android:textColor="@color/blue_data"
        android:visibility="gone"
        app:layout_constraintBaseline_toBaselineOf="@id/dismiss_button"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="@id/dialog_description"
        tools:text="@string/turn_on_feature" />
</androidx.constraintlayout.widget.ConstraintLayout>