<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data class="UserDailyScheduleFragmentBinding">

        <variable
            name="viewModel"
            type="com.autoencoder.glasdemoapp.main.userSchedule.UserDailyScheduleViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/blue_data"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/header_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_medium"
                android:layout_marginTop="@dimen/margin_medium"
                android:layout_marginBottom="@dimen/margin_medium"
                android:onClick="@{() -> viewModel.onBack()}"
                android:src="@drawable/back"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/header_title"
                style="@style/HeaderTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_medium"
                android:text="@string/user_daily_schedule"
                app:layout_constraintBottom_toBottomOf="@id/header_icon"
                app:layout_constraintStart_toEndOf="@id/header_icon"
                app:layout_constraintTop_toTopOf="@id/header_icon" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:src="@drawable/logo_header"
                android:tint="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ContentDescription" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <ImageView
            android:id="@+id/user_schedule_ic"
            android:layout_width="38dp"
            android:layout_height="38dp"
            android:layout_marginStart="13dp"
            android:layout_marginTop="14dp"
            android:src="@drawable/user_daily_schedule"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/header"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/title"
            style="@style/DemoActivityTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="13dp"
            android:text="@string/daily_schedule"
            app:layout_constraintBottom_toBottomOf="@id/user_schedule_ic"
            app:layout_constraintStart_toEndOf="@id/user_schedule_ic"
            app:layout_constraintTop_toTopOf="@id/user_schedule_ic" />

        <TextView
            android:id="@+id/description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_medium"
            android:text="@string/your_morning_departure_schedule"
            android:textColor="@color/text_gray"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/title"
            app:layout_constraintTop_toBottomOf="@id/title" />

        <View
            android:id="@+id/delimiter"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/margin_medium"
            android:background="@color/gray"
            app:layout_constraintTop_toBottomOf="@id/description" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/schedule"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/delimiter"
            tools:itemCount="7"
            tools:listitem="@layout/item_user_daily_schedule" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>